# hep_resonance_ad

./: .gitignore  DEVELOPMENT.md  EVALUATION_ALIGNMENT.md  LICENSE  LOCAL_RUN_GUIDE.md  PHASE1_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
configs/: CATHODE_8.yml  upsilon_reproduction.yaml
resonance_ad/: __init__.py
resonance_ad/analysis/: __init__.py  bdt.py  bump_hunt.py  significance.py
resonance_ad/core/: __init__.py  config.py  logging.py  utils.py
resonance_ad/models/: __init__.py  cathode.py  flows.py  training.py
resonance_ad/physics/: __init__.py  binning.py  kinematics.py
resonance_ad/plotting/: __init__.py  figure.py  paper_figures.py  plot_utils.py
scripts/: README.md  define_regions.py  download_data.py  evaluate.py  generate_figures.py  generate_paper_figures.py  load_data.py  train_cathode.py
scripts/sub/: evaluate.sh  generate_figures.sh  train_cathode.sh
sub/: README.md  plot.sh  run_pipeline.sh
tests/: test_config.py
