[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hep-resonance-ad"
version = "0.1.0"
description = "Research platform for CATHODE dimuon anomaly detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HEP Research Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "torch>=1.11.0",
    "awkward>=1.8.0",
    "dask-awkward>=0.2.0",  # 用于加载 pickle 文件中的 awkward arrays
    "uproot>=4.0.0",
    "scikit-learn>=1.0.0",  # sklearn (scikit_learn in requirements.txt)
    "tqdm>=4.60.0",  # 进度条
    "nflows>=0.14",  # normalizing flows
    "zfit>=0.17.0",  # 用于拟合（需要 tensorflow）
    "tensorflow>=2.13.0",  # zfit 的依赖
    "xgboost>=1.5.0",  # 用于 ROC 曲线评估
    "numba>=0.56.0",  # 用于 CUDA 加速（可选，但原始代码使用）
    "numdifftools>=0.9.0",  # 数值微分工具（原始代码使用）
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["resonance_ad*"]

[tool.black]
line-length = 100
target-version = ['py38']

